samples/_failures_safe/1761207940_5230ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eedfe002.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_eedfe002.c:169:5: error: expected expression at end of input
  169 |     if (input == NULL)
      |     ^~
./samples/SAFE/__tmp_eedfe002.c:169:5: error: expected declaration or statement at end of input
